[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cuda-kernel-verifier"
version = "1.0.2"
description = "Lightweight runtime correctness checker for custom CUDA/Triton kernels via statistical sampling and outlier-aware comparison."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["cuda", "triton", "kernel", "verification", "pytorch", "sampling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

# torch is listed as a dependency but the CUDA variant must be installed via
# PyTorch's own index. See the README for the recommended install command.
dependencies = [
    "torch>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/your-org/cuda-kernel-verifier"
Repository = "https://github.com/your-org/cuda-kernel-verifier"
Issues = "https://github.com/your-org/cuda-kernel-verifier/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cuda_kernel_verifier"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "examples/",
    "README.md",
    "pyproject.toml",
]
